load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

cmake(
    name = "z3",
    generate_args = ["-GNinja"],
    lib_source = "@z3//:all_srcs",
    out_binaries = ["z3"],
)

cmake(
    name = "cvc5",
    generate_args = ["-GNinja"],
    prefix_script = """\
cd $$EXT_BUILD_ROOT$$/external/cvc5
./contrib/get-abc
cd -
""",
    cache_entries = {
        "ENABLE_BEST": "ON",
        "CMAKE_BUILD_TYPE": "Production",
        "ENABLE_AUTO_DOWNLOAD": "ON",
    },
    lib_source = "@cvc5//:all_srcs",
    out_binaries = ["cvc5"],
)
