workspace(name = "solvers")

_ALL_CONTENT = """\
filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
"""

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# http_archive(
#     name = "rules_foreign_cc",
#     # TODO: Get the latest sha256 value from a bazel debug message or the latest 
#     #       release on the releases page: https://github.com/bazelbuild/rules_foreign_cc/releases
#     #
#     sha256 = "33a5690733c5cc2ede39cb62ebf89e751f2448e27f20c8b2fbbc7d136b166804",
#     strip_prefix = "rules_foreign_cc-0.5.1",
#     url = "https://github.com/bazelbuild/rules_foreign_cc/archive/0.5.1.tar.gz"
# )

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "io_bazel_stardoc",
    remote = "https://github.com/bazelbuild/stardoc.git",
    # tag = "0.4.0",
    commit = "4378e9b6bb2831de7143580594782f538f461180",
    shallow_since = "1570829166 -0400",
)

load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")
stardoc_repositories()

local_repository(
    name = "rules_foreign_cc",
    # build_file_content = _ALL_CONTENT,
    # build_file = "BUILD.bazel",
    path = "./rules_foreign_cc",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")

rules_foreign_cc_dependencies()

http_archive(
    name = "z3",
    build_file_content = _ALL_CONTENT,
    strip_prefix = "z3-z3-4.8.10",
    url = "https://github.com/Z3Prover/z3/archive/refs/tags/z3-4.8.10.tar.gz",
    sha256 = "12cce6392b613d3133909ce7f93985d2470f0d00138837de06cf7eb2992886b4"
)

http_archive(
    name = "cvc4",
    build_file_content = _ALL_CONTENT,
    strip_prefix = "cvc5-1.8",
    url = "https://github.com/cvc5/cvc5/archive/refs/tags/1.8.tar.gz",
    # sha256 = "12cce6392b613d3133909ce7f93985d2470f0d00138837de06cf7eb2992886b4"
)


http_archive(
    name = "abc",
    build_file_content = _ALL_CONTENT,
    strip_prefix = "abc-master",
    url = "https://github.com/berkeley-abc/abc/archive/refs/heads/master.tar.gz",
    sha256 = "1ac3ba780b0586bd0ee3f7d82c9173e28b47a7c0afeedec524bdbef8e5cc1d0e",
)
